# slide-extractor

./: .gitignore  README.md  pyproject.toml
src/slide_extractor/: classify.py  cli.py  compile.py  deduplicate.py  detect.py  download.py  env.py  extract.py  index.py  summarize.py
